codex-rs/core/tests/suite/snapshots/all__suite__mcp_tool_exposure__deferred_tools_recover_during_sampling.snap
---
source: core/tests/suite/mcp_tool_exposure.rs
expression: "format_labeled_requests_snapshot(\"Deferred namespaces appear after Apps recovers between sampling requests.\",\n&[(\"Apps unavailable\", &requests[0]), (\"Apps recovered\", &requests[1]),],)"
---
Scenario: Deferred namespaces appear after Apps recovers between sampling requests.

## Window 1
-- request 1 (turn; Apps unavailable) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <headless_session>
        This session runs unattended through `codex exec`. Nobody reads the `commentary` channel while you work,...nd put everything the user needs in the final answer. [hash=cb124ac4f054c233]
        </headless_session>
    [03] <tools>
        Deferred tool namespaces:
        - multi_agent_v1: Tools for spawning and managing sub-agents.
        </tools>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    use an app after it recovers
-- request 2 (turn; Apps recovered) --
03:function_call/request_user_input:{"questions":[{"header":"Continue","id":"continue","options":[{"description":"Continue the test.","label...:"No"}],"question":"Continue after Apps recovers?"}]} [hash=31004ebd8cd711b2]
04:function_call_output:{"answers":{"continue":{"answers":["Yes (Recommended)"]}}}
05:message/developer[2]:
    [01] <APPS_INSTRUCTIONS>
    [02] <tools>
        Added deferred tool namespaces:
        - mcp__codex_apps__calendar: Plan events and manage your calendar.
        </tools>
